# IMAC_WORLD

./: README.md
Imac_World/: CMakeLists.txt  scene.txt
Imac_World/IW_test/: cube_test.cpp  exo1_triangle_couleurs.cpp
Imac_World/IW_test/shaders/: 3D.vs.glsl  color2D.vs.glsl  directionallight.fs.glsl  mandelbrot.vs.glsl  normals.fs.glsl  tex3D.fs.glsl  text2D.vs.glsl
Imac_World/glimac/include/glimac/: Cube.hpp  SDLWindowManager.hpp  TrackballCamera.hpp  common.hpp
Imac_World/glimac/src/: SDLWindowManager.cpp
Imac_World/libs/glimac/include/glimac/: Above.hpp  Cube.hpp  Cursor.hpp  FreeflyCamera.hpp  Grid.hpp  Overlay.hpp  RadialBasicFunction.hpp  RadialBasisFunction.hpp  SDLWindowManager.hpp  ShapeGrid.hpp  Structure.hpp  Texture.hpp  TrackballCamera.hpp
Imac_World/libs/glimac/src/: Above.cpp  Cube.cpp  Cursor.cpp  FreeflyCamera.cpp  Grid.cpp  Overlay.cpp  RadialBasicFunction.cpp  RadialBasisFunction.cpp  SDLWindowManager.cpp  Texture.cpp  TrackballCamera.hpp  objloader.cpp
Imac_World/libs/imgui/: CMakeLists.txt
Imac_World/libs/imgui/include/imgui/: imgui_stdlib.h
Imac_World/libs/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_stdlib.cpp  imgui_widgets.cpp
Imac_World/save/: inversemultiquadra.txt  multiquadra.txt  scene.txt  scene1.txt  scene2.txt  scenetest2.txt  scenetest3.txt  scenetexture.txt  test.txt  test2.txt
Imac_World/src/: main.cpp
Imac_World/src/shaders/: directionallight.fs.glsl  directionallighttexture.fs.glsl  normals.fs.glsl  tex3D.fs.glsl
